Homework OOP Sem4 Finish